--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-simple-code-editor": "0.13.1",
+    "react-virtualized": "9.22.3",
     "uuid": "9.0.0",
     "zustand": "4.1.5"
   },
