--- a/package.json
+++ b/package.json
@@ -83,13 +83,12 @@
     "webpack": "^5.64.4",
     "webpack-dev-server": "^4.6.0",
     "webpack-manifest-plugin": "^4.0.2",
-    "workbox-webpack-plugin": "^6.4.1"
+    "workbox-webpack-plugin": "^6.4.1",
+    "dotenv": "^10.0.0",
+    "dotenv-expand": "^5.1.0"
   },
   "dependencies": {
     "classnames": "2.3.2",
-    "cross-env": "7.0.3",
-    "dotenv": "^10.0.0",
-    "dotenv-expand": "^5.1.0",
     "prismjs": "1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
