--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-named-asset-import": "^0.3.8",
+    "babel-plugin-transform-react-remove-prop-types": "0.4.24",
     "babel-preset-react-app": "^10.0.1",
     "bfj": "^7.0.2",
     "browserslist": "^4.18.1",
@@ -31,6 +32,8 @@
     "chalk": "4.1.2",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.2.0",
+    "dotenv": "^10.0.0",
+    "dotenv-expand": "^5.1.0",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-config-react-app": "^7.0.1",
@@ -83,9 +86,7 @@
     "webpack": "^5.64.4",
     "webpack-dev-server": "^4.6.0",
     "webpack-manifest-plugin": "^4.0.2",
-    "workbox-webpack-plugin": "^6.4.1",
-    "dotenv": "^10.0.0",
-    "dotenv-expand": "^5.1.0"
+    "workbox-webpack-plugin": "^6.4.1"
   },
   "dependencies": {
     "classnames": "2.3.2",
@@ -116,14 +117,10 @@
   },
   "browserslist": {
     "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+      "last 2 Chrome versions, last 2 Firefox versions, last 2 safari versions"
     ],
     "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+      "last 2 Chrome versions, last 2 Firefox versions, last 2 safari versions"
     ]
   },
   "engines": {
@@ -135,11 +132,6 @@
     ],
     "*.{md,json}": [
       "prettier --write"
-    ]
-  },
-  "babel": {
-    "presets": [
-      "react-app"
     ]
   }
 }
